--- a/templates/translation_detail.html
+++ b/templates/translation_detail.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Детали перевода | Image Translator Pro</title>
+
+
+    <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicon.png">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
