--- a/templates/main.html
+++ b/templates/main.html
@@ -42,11 +42,11 @@
                     <div class="form-group">
                         <label for="language">Язык перевода:</label>
                         <select name="language" id="language">
-                            <option value="en">Английский</option>
-                            <option value="es">Испанский</option>
-                            <option value="fr">Французский</option>
-                            <option value="de">Немецкий</option>
-                            <option value="ru">Русский</option>
+                            <option value="английский">Английский</option>
+                            <option value="испанский">Испанский</option>
+                            <option value="французский">Французский</option>
+                            <option value="немецкий">Немецкий</option>
+                            <option value="русский">Русский</option>
                         </select>
                     </div>
 
