--- a/templates/history.html
+++ b/templates/history.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>История переводов</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/history.css') }}">
+
+      <link rel="icon" href="{{ url_for('static', filename='images/logo.png') }}" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="https://via.placeholder.com/50" alt="Логотип">
+            <img src="static/images/logo.png" alt="Логотип">
             <h1>Переводчик с изображений</h1>
         </div>
         <nav class="header-nav">
